# zerializer

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  zerializer.sublime-project  zerializer.sublime-workspace
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  zerializer.hpp
include/zerializer/: zerializer.hpp
src/: CMakeLists.txt  zerializer.cpp
